--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/svg": "^0.4.0",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.19.3",
@@ -20,10 +21,15 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "fibers": "^5.0.1",
     "jest": "^27.4.4",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.2.1",
     "vue-jest": "^3.0.4"
   }
 }
